--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "deepl-node": "^1.13.0",
     "fast-xml-parser": "^4.4.0",
     "lucide-react": "^0.379.0",
     "next": "15.0.0-rc.0",
