--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "deepl-node": "^1.13.0",
+    "exceljs": "^4.4.0",
     "fast-xml-parser": "^4.4.0",
     "lucide-react": "^0.379.0",
     "next": "15.0.0-rc.0",
