--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "deepl-node": "^1.13.0",
     "exceljs": "^4.4.0",
     "fast-xml-parser": "^4.4.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.379.0",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
