--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-upload-to-s3": "0.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
