--- a/package.json
+++ b/package.json
@@ -10,45 +10,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.600.0",
-    "@aws-sdk/s3-request-presigner": "^3.600.0",
+    "@aws-sdk/client-s3": "^3.614.0",
+    "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
-    "@sicamois/use-upload-to-s3": "0.3.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-696af53-20240625",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "deepl-node": "^1.13.0",
-    "eslint-plugin-react-compiler": "^0.0.0-experimental-51a85ea-20240601",
+    "eslint-plugin-react-compiler": "^0.0.0-experimental-0998c1e-20240625",
     "exceljs": "^4.4.0",
     "fast-xml-parser": "^4.4.0",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.379.0",
-    "next": "15.0.0-rc.0",
-    "next-themes": "^0.3.0",
-    "react": "^19.0.0-rc-3563387fe3-20240621",
-    "react-dom": "^19.0.0-rc-3563387fe3-20240621",
+    "lucide-react": "^0.408.0",
+    "next": "^15.0.0-rc.0",
+    "react": "^19.0.0-rc-01172397-20240716",
+    "react-dom": "^19.0.0-rc-01172397-20240716",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-upload-to-s3": "0.1.3",
-    "zod": "^3.23.8"
+    "use-upload-to-s3": "^0.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.8",
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.0-rc.0",
-    "postcss": "^8.4.38",
+    "@types/node": "^20.14.10",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "npm:types-react-dom@^19.0.0-alpha.3",
+    "eslint": "^9.7.0",
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8.4.39",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2"
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.3"
   }
 }
