--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.408.0",
     "next": "^15.0.0-rc.0",
+    "next-themes": "^0.3.0",
     "react": "^19.0.0-rc-01172397-20240716",
     "react-dom": "^19.0.0-rc-01172397-20240716",
     "server-only": "^0.0.1",
@@ -43,6 +44,7 @@
     "eslint": "^9.7.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
